--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -25,5 +25,4 @@ jobs:
 
       - name: Run tests with pytest
         run: |
-          cd githubActions
-          pytest -v
+          pytest --rootdir=$(pwd)
