--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -25,4 +25,4 @@ jobs:
 
       - name: Run tests with pytest
         run: |
-          pytest
+          PYTHONPATH=. coverage run -m pytest -v -s
